syntax = "proto3";

package points;
option go_package = ".";

message PointsRecord {
  string article_id = 1;
  int32 coin_count = 2;
  string date = 3;
}

message SignInReq {
  string user_id = 1;
}

message SignInResp {
  bool success = 1;
  string message = 2;
}

message AddArticlePointReq {
  string user_id = 1;
  string article_id = 2;
  int64 coin_count = 3;
}

message AddArticlePointResp {
  bool success = 1;
  string message = 2;
}

message GetUserAddPointHistoryReq {
  string user_id = 1;
}

message GetUserAddPointHistoryResp {
  repeated PointsRecord points_record = 1;
}

service PointsService {

  rpc SignIn(SignInReq) returns (SignInResp); //签到
  rpc AddArticlePoint(AddArticlePointReq) returns (AddArticlePointResp); //对某个文章进行投币
  rpc GetUserAddPointHistory(GetUserAddPointHistoryReq) returns (GetUserAddPointHistoryResp); //获取用户的投币记录

}
